Update Docker-Environment and Readme.md

--- a/Project/.env
+++ b/Project/.env
@@ -1,8 +1,8 @@
 
 #database variables
-SQL_Name = electricity_provider
-SQL_USER = electricity_user
-SQL_PASSWORD = tsduoFKLafoi9GI7sd97ds99d7799FHou
+SQL_Name = blokus_game
+SQL_USER = blokus_user
+SQL_PASSWORD = tsduoFKLaghsra8dsjHJJ6787sd97ds99d7799FHou
 HOST = postgres_db
 PORT = 5432
 
