--- a/Project/blokusserver/docker-compose.yaml
+++ b/Project/blokusserver/docker-compose.yaml
@@ -1,28 +1,34 @@
 services:
-  web: 
+
+  
+      
+
+  src: 
     build:
-      context: app
-      target: dev-envs
+      context: src
     ports: 
       - '8000:8000'
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-    env_file:
-      - ./.env
+      - ./src:/app
+    environment:
+       WEB_DOCUMENT_ROOT: /app/src
     depends_on:
       - postgres_db
+    links:
+    - postgres_db
     
   postgres_db:
-      image: postgres
+      image: postgres:16.0-alpine
+      container_name: postgres_db
+      hostname: postgres_db
       volumes:
         - postgres_data:/var/lib/postgresql/data
       environment:
         - POSTGRES_DB=${SQL_NAME}
         - POSTGRES_USER=${SQL_USER}
-        - POSTGRES_PASSWORD=${SQL_PASSWORD}
-        
+        - POSTGRES_PASSWORD=${SQL_PASSWORD}  
       ports:
-        - '5432:80'
+        - '5432:5432'
 
   pgadmin:
     image: dpage/pgadmin4
@@ -36,3 +42,5 @@ services:
     restart: unless-stopped
 volumes:
   postgres_data:
+
+
