--- a/Project/blokusserver/src/Dockerfile
+++ b/Project/blokusserver/src/Dockerfile
@@ -3,7 +3,7 @@ EXPOSE 8000
 WORKDIR /app 
 COPY requirements.txt /app
 RUN apk update
-RUN apk add postgresql-dev gcc python3-dev musl-dev
+RUN apk add postgresql-dev gcc python3-dev musl-dev --no-cache
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt --no-cache-dir
 COPY . /app 
