--- a/Project/blokusserver/docker-compose.yaml
+++ b/Project/blokusserver/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
       
 
   authentication: 
+    container_name: auth-service
     build:
       context: authentication
     ports: 
@@ -18,6 +19,7 @@ services:
     - postgres_db
 
   networking:
+    container_name: game-service
     build:
       context: networking
     ports:
